--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,9 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Build
-        run: npm run build
+        run: |
+          npm i
+          npm run build
       -
         name: Deploy to GitHub Pages
         if: success()
