--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,6 @@ jobs:
         with:
           target_branch: gh-pages
           build_dir: dist
+          fqdn: pass.nkate.com
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
